--- a/spain.html
+++ b/spain.html
@@ -28,10 +28,10 @@
     <nav>
         <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex">
             <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="index.html"><span aria-hidden="true">00</span>Home</a>
-            <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="destination.html"><span aria-hidden="true">01</span>poetry</a>
-            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="crew.html"><span aria-hidden="true">02</span>ladybug</a>
-<!--             <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="technology.html"><span aria-hidden="true">03</span>Technology</a>
- -->        </ul>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="france.html"><span aria-hidden="true">01</span>France</a>
+            <li><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="greece.html"><span aria-hidden="true">02</span>Greece</a>
+            <li class="active"><a class="ff-sans-cond uppercase text-white letter-spacing-2" href="spain.html"><span aria-hidden="true">03</span>Spain</a>
+       </ul>
     </nav>
   </header>
   
