--- a/france.html
+++ b/france.html
@@ -13,7 +13,7 @@
       
   <!-- Our custom CSS -->
   <link rel="stylesheet" href="index.css">
-  <title>Space for Art</title>
+  <title>MEC Wine Menu & Map</title>
   <script src="navigation.js" defer></script>
   <script src="tabs.js" defer></script>
 
